<resources>
    <string name="app_name">World News</string>
    <string name="welcome">Welcome</string>
    <string name="are_you_already_registered">Are you already registered?</string>
    <string name="password">Password</string>
    <string name="did_you_forget_your_password">Did you forget your password?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="check_email">Check your email</string>
    <string name="check_password">Check your password</string>
    <string name="pick_some_categories">Pick some categories</string>
    <string name="pick_a_country">Pick a country</string>

    <string name="confirm_text">Confirm</string>

    <string name="category_business">Business</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_general">General</string>
    <string name="category_health">Health</string>
    <string name="category_science">Science</string>
    <string name="category_sports">Sports</string>
    <string name="category_technology">Technology</string>

    <string name="countries_france">France</string>
    <string name="countries_italy">Italy</string>
    <string name="countries_germany">Germany</string>
    <string name="countries_spain">Spain</string>
    <string name="countries_unitedkingdom">United Kingdom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_headlines">Top headlines</string>
    <string name="my_choices">My choices</string>
    <string name="search_article">Search article</string>
    <string name="favorite_articles">Favorite articles</string>
    <string name="json_loading_error">There was an error loading the JSON file</string>

    <string name="error_email_login">Check the email address</string>
    <string name="error_password_login">The password must have at least 8 characters</string>
    <string name="error_retrieving_news">There was an error retrieving the news</string>
    <string name="error_no_internet">No internet connection</string>


</resources>