<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:srcCompat="@drawable/login_main"
        app:tint="?android:attr/textColorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/welcome"
        android:textAppearance="@style/MyHeadlineLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/are_you_already_registered"
        android:textAppearance="?attr/textAppearanceBodySmall" />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:background="#05000000"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/outline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:background="#05000000"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/outline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:gravity="center|start"
        android:text="@string/did_you_forget_your_password"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/login"

        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="100dp">

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/margin"
            android:layout_toStartOf="@id/text_or"
            android:background="#555" />

        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/or" />

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/margin"
            android:layout_toEndOf="@id/text_or"
            android:background="#555" />
    </RelativeLayout>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"

        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="50dp"
        android:text="@string/login_with_google"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:icon="@drawable/icon_google"
        app:iconGravity="textStart"
        app:iconTint="@null" />
</LinearLayout>