<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_home"
    app:startDestination="@id/headlineFragment">
    <fragment
        android:id="@+id/headlineFragment"
        android:name="com.unimib.worldnews25.ui.home.fragment.HeadlineFragment"
        android:label="@string/top_headlines"
        tools:layout="@layout/fragment_headline" >
        <action
            android:id="@+id/action_headlineFragment_to_articleFragment"
            app:destination="@id/articleFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.unimib.worldnews25.ui.home.fragment.FavoritesFragment"
        android:label="@string/favorite_articles"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/myChoicesFragment"
        android:name="com.unimib.worldnews25.ui.home.fragment.MyChoicesFragment"
        android:label="@string/my_choices"
        tools:layout="@layout/fragment_my_choices" />
    <fragment
        android:id="@+id/searchArticleFragment"
        android:name="com.unimib.worldnews25.ui.home.fragment.SearchArticleFragment"
        android:label="@string/favorite_articles"
        tools:layout="@layout/fragment_search_article" />
    <fragment
        android:id="@+id/articleFragment"
        android:name="com.unimib.worldnews25.ui.home.fragment.ArticleFragment"
        android:label="fragment_article"
        tools:layout="@layout/fragment_article" />
</navigation>